--- a/landing.html
+++ b/landing.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" type="text/css" href="/fadstreet/files/css/style_landing.css">
     <link rel="stylesheet" type="text/css" href="/fadstreet/files/css/style_navbar.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
     <title>FadStreet</title>
   </head>
   <body ng-controller="landingController">
-    <!-- <navbar> -->
-      <div class="container-flow">
+    <header class="default">
+      <div class="container-flow" style="background-color:white;">
         <ul class="nav nav-tabs">
           <li role="presentation" ng-class="women_active"><a href="#" ng-click="women_active='active';men_active='inactive'">SHOP WOMEN</a></li>
           <li role="presentation" ng-class="men_active"><a href="#" ng-click="women_active='inactive';men_active='active'">SHOP MEN</a></li>
           <div class="brand">
-            <span style="font-size:2em;cursor:default"><span style="color:#4CD3AB">Fad</span>Street</span>
+            <span style="font-size:2em;cursor:default;position:relative;left:2.5vw;"><span style="color:#4CD3AB">Fad</span>Street</span>
             <div class="nav-right">
               <!-- <loginbutton>Download our App</loginbutton> -->
               <loginbutton ng-click="login()">LOGIN</loginbutton>
@@ -31,51 +31,36 @@
           </div>
         </ul>
       </div>
-      <div class="container-flow">
-        <div id="sticky-anchor"></div>
-        <nav class="navbar navbar-default" id="sticky">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <!-- <a class="navbar-brand" href="#">FadStreet</a> -->
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="container">
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                  <li><a href="#">HOME <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">EXPLORE</a></li>
-                  <li><a href="#">NEARBY</a></li>
-                  <li><a href="#">BRANDS</a></li>
-                  <li><a href="#">MYCLOSET</a></li>
-                </ul>
-              </div><!-- /.navbar-collapse -->
-            </div>
-          </div><!-- /.container-fluid -->
-        </nav>
+      <div class="container-flow customnavbar">
+        <div class="container">
+          <ul class="overflow_scroll">
+            <a href=""><li>HOME</li></a>
+            <a href=""><li>EXPLORE</li></a>
+            <a href=""><li>NEARBY</li></a>
+            <a href=""><li>BRANDS</li></a>
+            <a href=""><li>MYCLOSET</li></a>
+          </ul>
+        </div>
       </div>
-    <!-- </navbar> -->
-    <div class="container-flow search_area">
-      <div class="container">
-        <div align="center">
-          <p>Choose an Item</p>
-          <hr style="border-color:black;margin:5px 0px;" width="10%">
-          <div ng-repeat="filter in fiters">
-            <div class="col-md-1 col-sm-1 col-xs-1">
-              <img ng-src="{{filter}}" height="70" width="70">
+      <div class="container-flow search_area">
+        <div class="container">
+          <div align="center">
+            <!-- <p><strong>Choose an Item</strong></p> -->
+            <!-- <hr style="border-color:black;margin:5px 0px 10px 0px;" width="10%"> -->
+            <div ng-repeat="filter in filters" class="search_filter">
+              <img ng-src="{{filter}}" height="80" width="80" ng-click="select($index)">
             </div>
+            <hr style="border-color:black;margin:5px 0px 10px 0px;" width="10%" ng-show="filter_selected">
+            <div ng-repeat="filter in selected_filters" class="selected_filter">
+              <img ng-src="{{filter}}" height="70" width="70" ng-click="remove($index)">
+            </div>
+            <div class="hide-button" ng-show="filter_close"><i class="fa fa-times" ng-click="removeAll()"></i></div>
+            <!-- <br> -->
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
+    </header>
+    <div class="container products">
       <div ng-repeat="src in sources">
         <div class="col-md-3 col-sm-4 col-xs-6">
           <div class="grid wow fadeInUp" data-wow-delay="{{$index - ($index * 0.95)}}s">
@@ -90,7 +75,7 @@
                 <p class="description" align="center"><span class="glyphicon glyphicon-search"></span>&nbsp;Buy Similar</p>
               </figcaption>     
             </figure>
-            <div class="container-flow">
+            <div class="row">
               <div class="display_info">Sample</div>
             </div>
           </div>
@@ -152,8 +137,23 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/angular-material-icons/0.4.0/angular-material-icons.min.js"></script> 
     <script type="text/javascript" src="/fadstreet/files/js/ngFileReader.js"></script>
-    <!-- Dynamic content layout -->
-    <!-- // <script type="text/javascript" src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script> -->
     <script>new WOW().init();</script>
+    <script>
+      (function($) {
+        var ost = 0;
+        $(window).scroll(function() {
+          var cOst = $(this).scrollTop();
+
+          if(cOst > 200 && cOst > ost) {
+             $('header').addClass('fixed').removeClass('default');
+          }
+          else {
+             $('header').addClass('default').removeClass('fixed');
+          }
+
+          ost = cOst;
+        });
+      })(jQuery);
+    </script>
   </body>
 </html>
