--- a/login.html
+++ b/login.html
@@ -11,18 +11,20 @@
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
     <title>FadStreet - Login</title>
   </head>
-  <body ng-controller="loginController" ng-cloak style="background-color:#FFF8F8;">
-
+  <body ng-controller="loginController" ng-cloak style="background-color:#fff;">
+    <br>
     <section id="home" ng-intit="show_login=true;show_signup = false;">
       <div class="container">
         <div align="center">
-          <img class="img-responsive" src="/fadstreet/files/logo.png" height="200" width="300">
+          <span class="img_logo"><img src="/fadstreet/files/logo.png"></span>
+          <span class="login_logo">FAD<span style="color:#1C5ECF">STREET</span></span>
         </div>
+        <br>
         <div class="col-md-4 col-md-offset-4 col-sm-5 col-sm-offset-3 col-xs-8 col-xs-offset-2 animated flipInY">
             <div class="login_holder" ng-show="show_login" ng-class="shake">
               <span class="pull-left left_anchor"></span>
               <div class="col-md-10 col-md-offset-1">
-                <h3 style="font-size:4.5vh;color:#09587e;">Login</h3>
+                <h3 style="font-size:4.5vh;color:#1C5ECF;">Login</h3>
               </div>
               <hr>
               <form>
@@ -41,14 +43,14 @@
                 </div><br>
                 <div align="center">
                   <p>New to FadStreet?</p>
-                  <a ng-click="show_signup=true;show_login=false;shake=false;">Click Here</a>
+                  <a ng-click="show_signup=true;show_login=false;shake=false;" style="color:#1C5ECF">Click Here</a>
                 </div>
               </form>
             </div>
             <div class="login_holder" ng-show="show_signup" style="background-color:#">
               <span class="pull-left left_anchor"></span>
               <div class="col-md-10 col-md-offset-1">
-                <h3 style="font-size:4.5vh;color:#09587e;">Sign Up</h3>
+                <h3 style="font-size:4.5vh;color:#1C5ECF;">Sign Up</h3>
               </div>
               <hr>
               <form>
@@ -72,7 +74,7 @@
                 <br>
                 <div align="center">
                   <p>Already a FadStreet user?</p>
-                  <a ng-click="show_signup=false;show_login=true;">Click Here</a> 
+                  <a ng-click="show_signup=false;show_login=true;" style="color:#1C5ECF">Click Here</a> 
                 </div>              
             </form>
             </div>
